chore: Spring Boot 4.1.1 / JDK 25 / Jackson 3 마이그레이션 (hvy-common 0.3.0, jjwt 0.13 gson, Testcontainers 2)